--- a/src/main/resources/templates/user-settings.html
+++ b/src/main/resources/templates/user-settings.html
@@ -63,7 +63,7 @@
                 <label>Profilpicture:</label>
                 <div class="profile-picture-upload">
                     <img th:src="${userAttributes.profileImageData}" alt="Profilbild" class="profile-preview">
-                    <input type="file" name="profileImage" accept="image/*">
+                    <input type="file" name="profileImage" accept="image/png, image/jpeg, image/jpg">
                 </div>
             </div>
 
