--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -765,7 +765,20 @@ input:checked + .slider:before {
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
+.update-section {
+    background-color: #29293d;
+    box-shadow: 0 0.25rem 1.25rem rgba(0, 0, 0, 0.4);
+    border-radius: 0.875rem;
+    padding: 1.875rem;
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
 
+.update-box p {
+    margin: 0.5rem 0;
+}
 
 
 
